# townlet

./: .gitignore  .importlinter  .importlinter.analysis  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GRID_REFACTOR_PLAN.md  LICENSE  PROJECT_CLEAN_ORDER.md  README.md  SECURITY.md  docker-compose.spectator.yaml  employment_smoke_metrics.json  importlinter.ini  pyproject.toml  sonar-project.properties  tox.ini
.github/: pull_request_template.md
audit/: AUDIT_SUMMARY.md  FORWARD_WORK_PROGRAM.md  MODULE_DOCUMENTATION.md  QUICK_WINS.md  RISK_REGISTER.md  SYSTEM_DOCUMENTATION.md  WORK_PACKAGES.md  WP-306_PHASE0_REMEDIATION_PLAN.md  WP-306_PHASE2_PLAN.md  WP-306_PHASE3_PLAN.md  WP_OBSERVATION_VARIANTS_PHASE1.md
audit.old/: AUDIT_SUMMARY.md  MODULE_DOCUMENTATION.md  QUICK_WINS.md  QUICK_WIN_SPECS.md  RISK_REGISTER.md  WORK_PACKAGES.md  module_metadata.json
benchmarks/: m2_affordance_employment_baseline.json  m3_runtime_baseline.json
docs/: ARCHITECTURAL_ANALYSIS.md  ARCHITECTURE_INTERFACES.md  COMPLETION_CERTIFICATE_PPO_PHASE1.md  COMPLETION_CERTIFICATE_PPO_PHASE2_4.md  CONCEPTUAL_DESIGN.md  CONSOLE_DRY_RUN.md  EMPLOYMENT_DOCS_TEST_CHECKLIST.md  HIGH_LEVEL_DESIGN.md  IMPLEMENTATION_NOTES.md  MASTER_PLAN_PROGRESS.md  MILESTONE_ROADMAP.md  OBSERVER_UI_FEEDBACK.md  OBSERVER_UI_GUIDE.md  OPS_HANDBOOK.md  README.md  REQUIREMENTS.md  ROLLOUT_CAPTURE_GUIDE.md  ROLLOUT_MASTER_PLAN.md  ROLLOUT_PHASE4_ACCEPTANCE.md  TELEMETRY_CHANGELOG.md  WORK_PACKAGE_CONFLICT_INTRO.md  WORK_PACKAGE_CONFLICT_TRAINING.md  WORK_PACKAGE_EMPLOYMENT_LOOP.md  WORK_PACKAGE_OBSERVATION_UPGRADE.md  WORK_PACKAGE_OBSERVER_UI.md  WORK_PACKAGE_PPO_PHASES_2_4.md  WORK_PACKAGE_REPLAY_DATALOADER.md
scripts/: analyze_imports.py  audit_bc_datasets.py  bc_metrics_summary.py  benchmark_tick.py  capture_golden_hashes.py  capture_rollout.py  capture_rollout_suite.py  capture_scripted.py  check_docstrings.py  console_dry_run.py  curate_trajectories.py  demo_rehearsal.sh  demo_run.py  gen_config_reference.py  inspect_affordances.py  manage_phase_c.py  merge_rollout_metrics.py  observer_ui.py  ppo_telemetry_plot.py  profile_observation_tensor.py  promotion_drill.py  promotion_evaluate.py  reward_summary.py  run_anneal_rehearsal.py  run_employment_smoke.py  run_mixed_soak.py  run_replay.py  run_simulation.py  run_training.py  telemetry_check.py  telemetry_summary.py  telemetry_watch.py  validate_affordances.py  validate_ppo_telemetry.py  wp_d_benchmark.py  wp_d_benchmark_compare.py
snapshots/: snapshot-25.json  snapshot-50.json
tests/: __init__.py  conftest.py  runtime_stubs.py  test_affordance_hook_security.py  test_affordance_hooks.py  test_affordance_manifest.py  test_affordance_preconditions.py  test_affordance_runtime_config.py  test_affordance_telemetry.py  test_agents_services.py  test_basket_telemetry.py  test_bc_capture_prototype.py  test_bc_trainer.py  test_behavior_personality_bias.py  test_behavior_rivalry.py  test_benchmark_utils.py  test_capture_scripted_cli.py  test_cli_validate_affordances.py  test_config_domains.py  test_config_loader.py  test_conflict_scenarios.py  test_conflict_telemetry.py  test_console_auth.py  test_console_bridge_unit.py  test_console_commands.py  (+112 more)
(+858 files in other folders)
